rules/dangling-networkpolicy/test/success_matches_matchexpressions/input/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: exp-in-policy
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - web
  policyTypes:
  - Ingress
