rules/dangling-networkpolicy/test/success_matches_matchexpressions/input/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-pod
  namespace: default
  labels:
    app: web
spec:
  containers:
  - name: web
    image: nginx:latest
